# ridez

./: .dockerignore  .gitignore  Dockerfile.dev  Makefile  README.md  docker-compose.yml  fixtures.json  manage.py  pyproject.toml  start.sh
requirements/: core.in  core.txt  dev.in  dev.txt
rides/: admin.py  managers.py  models.py  urlconf.py  utils.py
rides/api/: pagination.py  permissions.py  ride.py
rides/migrations/: 0001_initial.py  0002_alter_rideevent_id_ride.py
rides/serializers/: ride.py  user.py
ridez/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: generate_fixtures.py
