[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ridez"
version = "0.1.0"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["ridez"]

[tool.setuptools.dynamic]
dependencies = "core.txt"

[tool.pyink]
line-length = 120
pyink-use-majority-quotes = true

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.format]
quote-style = "single"
