[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ridez"
version = "0.1.0"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["ridez"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/core.txt"]}
optional-dependencies.dev = { file = ["requirements/dev.txt"]}

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
fix = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
